--- a/templates/home.html
+++ b/templates/home.html
@@ -10,38 +10,48 @@
 </head>
 
 <body>
+    {% include 'nav.html' %}
+    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100"
+        alt="Sunset Over the City" />
     <div class="container">
         <h1 class="text-center mt-2 mb-4">{{company_name}} Website</h1>
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100"
-            alt="Sunset Over the City" />
-        <h3 class="text-center mt-2 mb-4">About</h3>
-        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum debitis architecto accusantium
-            autem quas.
-            Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt ducimus,
-            exercitationem nobis reiciendis eius.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum
-            debitis architecto accusantium autem quas.
-            Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt ducimus,
-            exercitationem nobis reiciendis eius.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum
-            debitis architecto accusantium autem quas.
-            Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt ducimus,
-            exercitationem nobis reiciendis eius.</p>
-        <h3 class="text-center mt-2 mb-4">Jobs</h3>
-        <p>
+        <div class="row" style="margin-bottom: 16px;">
+            <div class="col-md-6">
+                <p class="lead">
+                    Lorem psum, dolor sit amet consectetur adipisicing elit. Laborum debitis architecto accusantium
+                    autem quas.
+                    Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt
+                    ducimus,
+                    exercitationem nobis reiciendis eius.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laborum
+                    debitis architecto accusantium autem quas.
+                    Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt
+                    ducimus,
+                    exercitationem nobis reiciendis eius.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Laborum
+                    debitis architecto accusantium autem quas.
+                    Recusandae exercitationem inventore aspernatur maxime sint. Sapiente est facere commodi nesciunt
+                    ducimus,
+                    exercitationem nobis reiciendis eius.</p>
+            </div>
+            <div class="d-none d-md-block col-6">
+                <img src="/static/people.jpeg" style="height:320px; border-radius:4x">
+            </div>
+        </div>
+        <h2 class="text-center mt-2 mb-4">Jobs</h2>
         <div>
             {% for job in jobs %}
             {% include 'job_item.html' %}
             {% endfor %}
         </div>
-        </p>
-    </div>
-    <div class="text-center">
-        <button class="btn btn-primary btn -lg">Contact Us</button>
-        <p class="mt-4">Copyright 2023 Robin</p>
-    </div>
+        <div class="text-center">
+            <a class="btn btn-primary btn-lg">Contact Us</a></div>
+        </div>
+        {% include 'footer.html' %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
