--- a/templates/job_item.html
+++ b/templates/job_item.html
@@ -11,6 +11,6 @@
         {% endif %}
     </div>
     <div class="col-2">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+        <a href="/" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
 </div>
